# abirqu

./: .env.example  .gitignore  .readthedocs.yaml  AbirQu-Studio-Build-Spec.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL_READINESS.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  EXECUTION_PLAN.md  GUI_PLAN.md  IMPLEMENTATION_STATUS.md  INCIDENT_RESPONSE.md  LICENSE  MANIFEST.in  PUBLISHING.md  QDCG_CIRCUIT.txt  QDCG_EXPLANATION.md  QDCG_IBM_HARDWARE.md  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  benchmark_optimizer.py  benchmark_qiskit.py  benchmark_results.json  benchmark_run.py  benchmark_setup.py  build_mocks.py  example_c  example_cpp  fix_readme.py  full_benchmark.py  full_benchmark_results.json  mega_benchmark.py  mega_benchmark_v2.py  pyproject.toml  qdcg_demo.py  (+7 more)
.github/workflows/: build-desktop.yml  ci.yml  test-tutorials.yml
abirqu/: __init__.py  _deprecated.py  adaptive_mitigation.py  addons.py  agents.py  auto_scale.py  autodiff.py  autonomous.py  backend.py  benchmark_spec.py  bio.py  bio_impl.py  circuit.py  cli.py  compatibility.py  compression.py  converters.py  converters_inbound.py  dag_circuit.py  devtools.py  devtools_phase.py  dynamic_circuit.py  dynamical_decoupling.py  dynamics.py  entanglement_cutting.py  exceptions.py  gates.py  high_energy.py  industry.py  internet.py  job_orchestration.py  logging_config.py  mitigation.py  network.py  neutral_atom.py  noise.py  noise_toolkit.py  numpy_sim.py  orchestration.py  physics.py  (+16 more)
abirqu/agentic/: __init__.py
abirqu/agents/: __init__.py  circuit_agent.py  debug_agent.py  dev_harness.py  doc_agent.py  optimize_agent.py
abirqu/algorithms/: __init__.py  advanced.py  extensions.py  hhl.py  shor_quantum.py
abirqu/backends/: __init__.py  braket.py  google.py  hardware.py  ibm.py  neutral_atom.py  simulator.py
abirqu/benchmark/: __init__.py  benchmark_suite.py  circuit_benchmark.py  load_testing.py  monitoring.py  profiling.py  randomized_benchmarking.py  release.py
abirqu/chemistry/: __init__.py  chemistry_integration.py  fermion_mappers.py  matchgate_shadows.py  vqe_validated.py
abirqu/cli/: __init__.py  quantum_os_cli.py
abirqu/cloud/: __init__.py  abir_guard.py
abirqu/compilation/: __init__.py  annealing.py  measurement_based.py  optimization_passes.py  photonic.py  topological.py  topolological.py
abirqu/copilot/: __init__.py
abirqu/core/: __init__.py  circuit.py  gates.py  measurement.py  noise.py  qvm.py
abirqu/crypto/: __init__.py
abirqu/docs/: __init__.py  api_reference.py  beginner_guide.md  community_portal.py  ecosystem_integration.py  interactive_docs.py  tutorial_generator.py
abirqu/dwave/: __init__.py  converter.py  embedding.py  hybrid.py  noise_profile.py  qubo.py  schedule.py  topology.py
abirqu/education/: __init__.py  tutorials.py
abirqu/enterprise/: __init__.py  deployment.py  features.py  standards.py
abirqu/error_mitigation/: mitigation.py
abirqu/formats/: qir.py  (+5 more)
agents/: __init__.py  circuit_agent.py  debug_agent.py  dev_harness.py  doc_agent.py  optimize_agent.py
algorithms/: quantum_algorithms.py
assets/: architecture.md
backends/: __init__.py  braket.py  google.py  ibm.py  neutral_atom.py  simulator.py
benchmark_results/: REPORT.md  machine_spec.json  spec.py  verification.json
benchmarks/: run_benchmarks.py
benchpress/: __init__.py
bindings/: VERIFICATION_PLAN.md  generate_bindings.py
cli/: __init__.py
core/: __init__.py  circuit.py  measurement.py  noise.py  qvm.py
docs/: TUTORIAL_GUIDE.md  benchmarks.rst  changelog.rst  conf.py  contributing.rst  getting_started.rst  index.rst  whitepaper.md
examples/: distributed_sim.py  grover_search.py  qaoa_maxcut.py  qec_surface_code.py  quantum_ml.py  quick_start.py  real_hardware_execution.py  run_real_hardware.py  secure_circuit.py  vqe_h2.py
gui/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
include/: abirqu.h
installers/: abirqu.desktop
java/: TestAbirQu.java  pom.xml
js/: README.md  package-lock.json  package.json
kotlin/: build.gradle.kts  settings.gradle.kts
optimize/: adaptive.py  depth.py  phase_poly.py  pipeline.py  transpiler.py
patterns/: __init__.py  core_patterns.py  detector.py  registry.py  templates.py
plugins/: __init__.py  circuit_optimization.py  error_mitigation.py  noise_characterization.py  quantum_ml.py  vqe_advanced.py
qec/: __init__.py  codes.py  decoder.py  ft_compiler.py  ldpc.py  patch.py
scratch/: test_bp.py
scripts/: debug.sh  generate_notebooks.py  publish-crates.sh  publish-npm.sh  publish-pypi.sh  publish_pypi.sh
security/: attestation.py  encrypted_circuits.py  obfuscation.py  qkd_simulator.py
src/: c_api.rs  circuit.rs  clifford_sim.rs  gates.rs  info.rs  lib.rs  main.rs  mcp_gateway.rs  noise.rs  optimizer.rs  phase_poly.rs  security.rs  simulator.rs  tensor_network.rs  transpiler.rs  zx_calculus.rs
swift/: AbirQuGate.swift  AbirQuSimulator.swift  Package.swift
tests/: test_abir_guard.py  test_cloud_real.py  test_comprehensive.py  test_features.py  test_gui.py  test_hardware.py  test_hybrid_simulator.py  test_industry.py  test_integration.py  test_novel_contributions.py  test_phase31.py  test_phase32.py  test_phase33.py  test_phase34.py  test_phase35.py  test_phase36.py  test_phase37.py  test_phase38.py  test_phase39.py  test_phase40.py  test_plugins.py  test_properties.py  test_qec.py  test_quantum_communication.py  test_readme.py  test_tutorials.py  test_v1_2_1.py
tracker/: __init__.py
tutorials/: 01_bell_states_and_circuits.md  02_quantum_algorithms.md  03_error_correction.md  04_circuit_optimization.md  05_quantum_chemistry_vqe.md  1.md  10.md  100.md  101.md  102.md  103.md  104.md  105.md  106.md  107.md  108.md  109.md  11.md  110.md  111.md  112.md  113.md  114.md  115.md  116.md  117.md  118.md  119.md  12.md  120.md  121.md  122.md  123.md  124.md  125.md  126.md  127.md  128.md  129.md  13.md  (+166 more)
vscode/: extension.py
vscode-extension/: README.md  package.json
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/tests/: wasm-tests.rs
wasm/www/: index.html
(+383 files in other folders)
