[package]
name = "abirqu-core"
version = "1.2.1"
edition = "2021"
authors = ["Abir Datta <abir.datta.pro@gmail.com>"]
description = "High-performance Rust core for AbirQu Quantum SDK - Beat Qiskit & Cirq"
license = "MIT"
repository = "https://github.com/abirmaheshwari/abirqu"
keywords = ["quantum", "quantum-computing", "simulation", "qiskit-alternative"]
categories = ["science"]

[lib]
name = "abirqu_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.15.6"
num-complex = "0.4.3"
rayon = "1.7.0"
pyo3 = { version = "0.22.0", features = ["extension-module"], optional = true }

[features]
default = []
python = ["dep:pyo3"]

[dev-dependencies]
criterion = "0.5"

# Benchmarks (optional, create benches/simulator_bench.rs to enable)
# [[bench]]
# name = "simulator_bench"
# harness = false
