[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "abirqu"
version = "0.1.0"
description = "Next-generation quantum computing SDK with LDPC codes and post-quantum security"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "networkx>=2.6",
    "requests>=2.31.0"
]

[project.optional-dependencies]
gpu = ["cupy>=12.0.0"]
visualization = ["matplotlib>=3.5.0"]
crypto = ["cryptography>=3.4.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "abirqu.abirqu_core"
