[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "abirqu"
version = "0.2.0"
description = "Full-stack quantum computing SDK — real hardware support for IBM, D-Wave, SpinQ, and all quantum computers"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "networkx>=2.6",
    "requests>=2.31.0"
]

[project.optional-dependencies]
# Hardware backends
ibm = ["qiskit>=1.0", "qiskit-ibm-runtime>=0.20"]
dwave = ["dimod>=0.12", "dwave-ocean-sdk>=6.0"]
aws = ["amazon-braket-sdk>=1.56", "boto3>=1.28"]
azure = ["azure-quantum>=0.28"]
cirq = ["cirq>=1.3"]
ionq = ["requests>=2.31"]  # REST API
rigetti = ["pyquil>=4.0"]
quantinuum = ["pytket>=1.25", "pytket-quantinuum>=0.19"]
pasqal = ["pulser-core>=0.12"]
spinq = ["requests>=2.31"]  # REST API
# Hardware extras
all-hardware = ["abirqu[ibm,dwave,aws,azure,cirq]"]
# Other
gpu = ["cupy>=12.0.0"]
visualization = ["matplotlib>=3.5.0"]
crypto = ["cryptography>=3.4.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "abirqu.abirqu_core"
