[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abirqu"
version = "1.2.5"
description = "Full-stack quantum computing SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Abir Maheshwari", email = "abhirsxn@gmail.com"}
]
keywords = ["quantum", "computing", "SDK", "Qiskit", "Cirq", "IBM", "D-Wave", "Indian Quantum Mission"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "networkx>=2.6",
    "requests>=2.31.0",
    "packaging>=21.0"
]

[project.urls]
Homepage = "https://github.com/Abiress/abirqu"
Documentation = "https://github.com/Abiress/abirqu#readme"
Repository = "https://github.com/Abiress/abirqu"
Issues = "https://github.com/Abiress/abirqu/issues"

[project.scripts]
abirqu = "abirqu.__main__:main"

[project.optional-dependencies]
ibm = ["qiskit>=1.0", "qiskit-ibm-runtime>=0.20"]
dwave = ["dimod>=0.12", "dwave-ocean-sdk>=6.0"]
aws = ["amazon-braket-sdk>=1.56", "boto3>=1.28"]
azure = ["azure-quantum>=0.28"]
cirq = ["cirq>=1.3"]
ionq = ["requests>=2.31"]
rigetti = ["pyquil>=4.0"]
quantinuum = ["pytket>=1.25", "pytket-quantinuum>=0.19"]
pasqal = ["pulser-core>=0.12"]
spinq = ["requests>=2.31"]
all-hardware = ["abirqu[ibm,dwave,aws,azure,cirq]"]
gpu = ["cupy>=12.0.0"]
visualization = ["matplotlib>=3.5.0"]
crypto = ["cryptography>=3.4.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.0",
    "ruff>=0.1.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0"
]

[project.entry-points."abirqu.plugins"]
visualization = "plugins.visualization.plugin:load"
ibm_noise = "plugins.ibm_noise.plugin:load"
google_noise = "plugins.google_noise.plugin:load"
error_mitigation = "plugins.error_mitigation:activate"
vqe_advanced = "plugins.vqe_advanced:activate"
quantum_ml = "plugins.quantum_ml:activate"
noise_characterization = "plugins.noise_characterization:activate"
circuit_optimization = "plugins.circuit_optimization:activate"

[tool.setuptools.packages.find]
include = ["abirqu*", "plugins*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
