[package]
name = "abirqu-core-wasm"
version = "1.0.0"
edition = "2021"
authors = ["Abir Datta <abir.datta.pro@gmail.com>"]
description = "AbirQu Quantum SDK - WebAssembly build"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[[test]]
name = "wasm-tests"
harness = false
